tests/option_2_tests/fail/divides_three.gpy
fn divisiblebythree(n: i32) -> {
   n / 3 * 3 == n
}
divisiblebythree(9)